--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <div class="miJumbo">
-            <h1>Sitio web de LIBROS online</h1>
+            <h1>Esta es la prueba de integracion</h1>
         </div>
     </main>
   </body>
